Performance / PerformanceObserver leaks seen on bots https://bugs.webkit.org/show_bug.cgi?id=176269

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-09-02
Reviewed by Darin Adler.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::removeAllEventListeners):
* workers/WorkerGlobalScope.cpp:
(WebCore::WorkerGlobalScope::removeAllEventListeners):
Also use this opportunity to break up the reference cycle
between PerformanceObservers and the Performance object.

* page/Performance.h:
* page/Performance.cpp:
(WebCore::Performance::removeAllObservers):
Disassociate and clear observers.

* page/PerformanceObserver.h:
* page/PerformanceObserver.cpp:
(WebCore::PerformanceObserver::disassociate):
Clear the back-reference to the Performance object to
break the cycle.

Canonical link: https://commits.webkit.org/192920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221539 268f45cc-cd09-0410-ab3c-d52691b4dbfc